--- a/.github/workflows/knuth.yml
+++ b/.github/workflows/knuth.yml
@@ -55,14 +55,15 @@ jobs:
           fi
 
           if [[ "${UPLOAD_PKG}" == "true" ]]; then
+            twine upload -u ${PYPI_USER_NAME} -p ${PYPI_PASSWORD} dist/* || true
 
-            if [[ "${TRAVIS_BRANCH}" == "master" ]]; then
-              twine upload -u ${PYPI_USER_NAME} -p ${PYPI_PASSWORD} dist/* || true
-            else
-              # For Testing Release
-              # twine upload -r test -u ${PYPI_USER_NAME} -p ${PYPI_PASSWORD} dist/* || true
-              twine upload -u ${PYPI_USER_NAME} -p ${PYPI_PASSWORD} --repository-url https://test.pypi.org/legacy/ dist/*  || true
-            fi
+            # if [[ "${TRAVIS_BRANCH}" == "master" ]]; then
+            #   twine upload -u ${PYPI_USER_NAME} -p ${PYPI_PASSWORD} dist/* || true
+            # else
+            #   # For Testing Release
+            #   # twine upload -r test -u ${PYPI_USER_NAME} -p ${PYPI_PASSWORD} dist/* || true
+            #   twine upload -u ${PYPI_USER_NAME} -p ${PYPI_PASSWORD} --repository-url https://test.pypi.org/legacy/ dist/*  || true
+            # fi
           fi
 
 
